objects/Notification__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RTCI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <description>Time of event</description>
        <label>Event Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Time__c</fullName>
        <label>From Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Message__c</fullName>
        <label>Long Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message_ID__c</fullName>
        <externalId>true</externalId>
        <label>Message ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ticket</fullName>
                </value>
                <value>
                    <fullName>InvoiceReady</fullName>
                </value>
                <value>
                    <fullName>CreditCard</fullName>
                </value>
                <value>
                    <fullName>MassOutage</fullName>
                </value>
                <value>
                    <fullName>DeviceAlerts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Message__c</fullName>
        <label>Short Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Time__c</fullName>
        <label>To Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <externalId>true</externalId>
        <label>Transaction ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Account_ID__c</fullName>
        <label>Vision Account ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_ID__c</fullName>
        <label>Vision Customer ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Notification</label>
    <nameField>
        <displayFormat>N-{0000000000}</displayFormat>
        <label>Notification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>